# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  roni_poika.py  tasks.py  tuntikirjanpito.md
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
htmlcov/: RoniPoika_py.html  _Users_saarasalmensaari_Library_Caches_pypoetry_virtualenvs_ronipoika-X9aa9lVm-py3_9_lib_python3_9_site-packages__pytest___init___py.html  _Users_saarasalmensaari_Library_Caches_pypoetry_virtualenvs_ronipoika-X9aa9lVm-py3_9_lib_python3_9_site-packages__pytest__argcomplete_py.html  _Users_saarasalmensaari_Library_Caches_pypoetry_virtualenvs_ronipoika-X9aa9lVm-py3_9_lib_python3_9_site-packages__pytest__code___init___py.html  _Users_saarasalmensaari_Library_Caches_pypoetry_virtualenvs_ronipoika-X9aa9lVm-py3_9_lib_python3_9_site-packages__pytest__code_code_py.html  _Users_saarasalmensaari_Library_Caches_pypoetry_virtualenvs_ronipoika-X9aa9lVm-py3_9_lib_python3_9_site-packages__pytest__code_source_py.html  _Users_saarasalmensaari_Library_Caches_pypoetry_virtualenvs_ronipoika-X9aa9lVm-py3_9_lib_python3_9_site-packages__pytest__io___init___py.html  _Users_saarasalmensaari_Library_Caches_pypoetry_virtualenvs_ronipoika-X9aa9lVm-py3_9_lib_python3_9_site-packages__pytest__io_saferepr_py.html  _Users_saarasalmensaari_Library_Caches_pypoetry_virtualenvs_ronipoika-X9aa9lVm-py3_9_lib_python3_9_site-packages__pytest__io_terminalwriter_py.html  (+118 more)
resources/: highscore.csv
src/: .gitignore  RoniPoika.py  pyproject.toml  roni_poika.py  tasks.py
(+120 files in other folders)
